# django_to_congnito_migration

app/: Dockerfile  auth.py  config.py  create_tables.sql  docker-compose.yml  env.example  generate_schema_diagram.py  main.py  models.py  page.py  pyproject.toml  redeploy.sh  schemas.py  seed_companies.py  services.py
app/routers/: __init__.py  auth.py  companies.py  permissions.py  roles.py  users.py
docs/: infrastructure-login-migration.md  login-password-otp-flow.md  oidc-flow.md  saml-flow.md
docs/diagrams/: 01-pure-django-no-otp.mmd  02-pure-django-with-otp.mmd  03-migration-no-otp.mmd  04-migration-with-otp.mmd  05-post-migration-no-otp.mmd  06-post-migration-with-otp.mmd  07-pre-token-access-gate.mmd  infra-login-migration.mmd  oidc-01-pure-django.mmd  oidc-02-migration.mmd  oidc-03-post-migration.mmd  puppeteer-config.json  saml-01-pure-django.mmd  saml-02-migration.mmd  saml-03-post-migration.mmd
infrastructure/: samconfig.toml  template.yaml
infrastructure/src/: requirements.txt  user_migration_trigger.py
